Update and create record progress
